--- a/dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -1,6 +1,5 @@
 \chapter{Dnevnik promjena dokumentacije}
 		
-		\textbf{\textit{Kontinuirano osvježavanje}}\\
 				
 		
 		\begin{longtabu} to \textwidth {|X[2, l]|X[13, l]|X[3, l]|X[3, l]|}
@@ -13,24 +12,10 @@
 			\hline 
 			\endlastfoot
 			
-			0.1 & Napravljen predložak.	& Ivošević & 22.08.2013. 		\\[3pt] \hline 
-			0.2	& Dopisane upute za povijest dokumentacije.\newline Dodane reference. & Jović & 24.08.2013. 	\\[3pt] \hline 
-			0.5 & Dodan \textit{Use Case} dijagram i jedan sekvencijski dijagram, funkcionalni i nefunkcionalni zahtjevi i dodatak A & Ivošević & 25.08.2013. \\[3pt] \hline 
-			0.6 & Arhitektura i dizajn sustava, algoritmi i strukture podataka & Grudenić & 26.08.2013. \\[3pt] \hline 
-			0.8 & Povijest rada i trenutni status implementacije,\newline Zaključci i plan daljnjeg rada & Ivošević & 28.08.2013. \\[3pt] \hline 
-			0.9 & Opisi obrazaca uporabe & Jović & 07.09.2013. \\[3pt] \hline 
-			0.10 & Preveden uvod & Jović & 08.09.2013. \\[3pt] \hline 
-			0.11 & Sekvencijski dijagrami & Žužak & 09.09.2013. \\[3pt] \hline 
-			0.12.1 & Započeo dijagrame razreda & Horvat & 10.09.2013. \\[3pt] \hline 
-			0.12.2 & Nastavak dijagrama razreda & Horvat & 11.09.2013. \\[3pt] \hline 
-			\textbf{1.0} & Verzija samo s bitnim dijelovima za 1. ciklus & Ivošević & 11.09.2013. \\[3pt] \hline 
-			1.1 & Uređivanje teksta -- funkcionalni i nefunkcionalni zahtjevi & Grudenić \newline Jović & 14.09.2013. \\[3pt] \hline 
-			1.2 & Manje izmjene:Timer - Brojilo vremena & Grudenić & 15.09.2013. \\[3pt] \hline 
-			1.3 & Popravljeni dijagrami obrazaca uporabe & Jović & 15.09.2013. \\[3pt] \hline 
-			1.5 & Generalna revizija strukture dokumenta & Ivošević & 19.09.2013. \\[3pt] \hline 
-			1.5.1 & Manja revizija (dijagram razmještaja) & Jović & 20.09.2013. \\[3pt] \hline 
-			\textbf{2.0} & Konačni tekst predloška dokumentacije  & Ivošević & 28.09.2013. \\[3pt] \hline 
-			&  &  & \\[3pt] \hline
+			0.1 & Napisani obrasci uporabe & Bortas & 02.11.2020.		\\[3pt] \hline 
+			0.2	& Napisan Opis projektnog zadatka & Horvat & 03.11.2020.	\\[3pt] \hline 
+			0.5 & Dodani Use Case dijagrami i sekvencijski dijagrami & Bortas & 04.11.2020. \\[3pt] \hline
+			
 			
 			
 		\end{longtabu}
